@@ -1394,7 +1394,7 @@ TOOLS                   ICON                    "res\\Tools.ico"
 HELP                    ICON                    "res\\Help.ico"
 TRAYCONNECTED           ICON                    "res\\TrayConnected.ico"
 TRAYNOTCONNECTED        ICON                    "res\\TrayDisconnected.ico"
-TRAYLOWID               ICON                    "res\\TrayLowID.ico"
+TRAYLOWID               ICON                    "res\\TrayFirewalled.ico"
 DISPLAY                 ICON                    "res\\Display.ico"
 SECURITY                ICON                    "res\\Security.ico"
 WEB                     ICON                    "res\\Web.ico"
