@@ -227,8 +227,8 @@ XXXXYYZZ:
 + added "About kMule" page to options with information and donation possibility [WiZaRd]
 + Feature request: added additional CA icons, depending on the CA status/score [WiZaRd]
  * angry pirate: very bad
- * black skull: bad (score < 1)
- * closed treasure chest: unknown (score < 2)
+ * black skull: bad (score < 0.5)
+ * closed treasure chest: unknown (score < 1.3)
  * open treasure chest: good (score < 3.0)
  * happy pirate: very good
 - removed SOCKS4(a) proxy support, no one uses them [Tuxman]
@@ -243,3 +243,4 @@ XXXXYYZZ:
 + added support for peerblock cache.p2b format - orignal by ElKarro [WiZaRd]
 ! fixed crash on ip-filter update if blocked nodes are currently in use [WiZaRd]
 ~ part files are shared ASAP, now [WiZaRd]
+~ new kMule try icons [WiZaRd]
